--- a/views/Map/index.ejs
+++ b/views/Map/index.ejs
@@ -20,13 +20,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+5n6vCf5F5f5f5z5f5f5f5f5f5f5f5f5f5f5f5"
-        crossorigin="anonymous" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
-        integrity="sha384-TwnJaj9qz8u5Kw5Iwjs2J9Bshj4K07hoK5fhI5f5f5f5f5f5f5f5f5f5f5f5f5f5f5"
-        crossorigin="anonymous"></script>
 
 </head>
 
@@ -58,14 +51,50 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
+
                 </ul>
-                <div class="ml-auto">
-                    <img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png" alt="User Icon" width="2%" style="filter: grayscale(100%);">
-                    <span>No User Found!</span>
+                <li class="nav-item" style="list-style-type: none;">
+                  <div class="d-flex align-items-center gap-3">
+                    <div class="d-flex align-items-center dropdown color-modes">
+                        <button class="btn btn-link px-0 text-decoration-none dropdown-toggle d-flex align-items-center"
+                            id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown"
+                            data-bs-display="static">
+                            <svg class="bi my-1 me-2 theme-icon-active"><use href="#circle-half"></use></svg>
+                            <span class="ms-2" id="bd-theme-text">Toggle theme</span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme"
+                            style="--bs-dropdown-min-width: 8rem;">
+                            <li>
+                                <button type="button" class="dropdown-item d-flex align-items-center"
+                                    data-bs-theme-value="light">
+                                    <svg class="bi me-2 opacity-50 theme-icon"><use href="#sun-fill"></use></svg>
+                                    Light
+                                    <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="dropdown-item d-flex align-items-center"
+                                    data-bs-theme-value="dark">
+                                    <svg class="bi me-2 opacity-50 theme-icon"><use href="#moon-stars-fill"></use></svg>
+                                    Dark
+                                    <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="dropdown-item d-flex align-items-center active"
+                                    data-bs-theme-value="auto">
+                                    <svg class="bi me-2 opacity-50 theme-icon"><use href="#circle-half"></use></svg>
+                                    Auto
+                                    <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </li>
+            <!-- <li class="nav-item" style="list-style-type: none; ">
+              <img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png" alt="User Icon" width="2%" style="filter: grayscale(100%);">
+            </li> -->
             </div>
         </div>
     </nav>
@@ -83,7 +112,7 @@
                         <th>Player Name</th>
                         <th>Permission Level</th>
                         <th>Z Coordinate</th>
-                        <th>Height</th>
+                        <th>Show On Map</th>
                     </tr>
                 </thead>
 
@@ -98,43 +127,7 @@
                 <div id="last-update"></div>
                 <!-- This is the last update timestamp -->
             </div>
-            <div class="d-flex align-items-center gap-3">
-                <div class="d-flex align-items-center dropdown color-modes">
-                    <button class="btn btn-link px-0 text-decoration-none dropdown-toggle d-flex align-items-center"
-                        id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown"
-                        data-bs-display="static">
-                        <svg class="bi my-1 me-2 theme-icon-active"><use href="#circle-half"></use></svg>
-                        <span class="ms-2" id="bd-theme-text">Toggle theme</span>
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme"
-                        style="--bs-dropdown-min-width: 8rem;">
-                        <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center"
-                                data-bs-theme-value="light">
-                                <svg class="bi me-2 opacity-50 theme-icon"><use href="#sun-fill"></use></svg>
-                                Light
-                                <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center"
-                                data-bs-theme-value="dark">
-                                <svg class="bi me-2 opacity-50 theme-icon"><use href="#moon-stars-fill"></use></svg>
-                                Dark
-                                <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center active"
-                                data-bs-theme-value="auto">
-                                <svg class="bi me-2 opacity-50 theme-icon"><use href="#circle-half"></use></svg>
-                                Auto
-                                <svg class="bi ms-auto d-none"><use href="#check2"></use></svg>
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+
         </div>
         <!-- Bootstrap Map Container -->
         <div id="map" class="container-fluid"></div>
@@ -223,33 +216,52 @@ function updateTable() {
             markers[player.name].setLatLng([pixelZ, pixelX]);
           }
 
-          // Check if a row for this player already exists in the sidebar
-          if (playerRows.has(player.name)) {
-            // Update the existing row with new coordinates
-            const playerRow = playerRows.get(player.name);
-            playerRow.innerHTML = `
-              <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
-              <td>${player.position.x}</td>
-              <td>${player.position.z}</td>
-              <td>${player.position.y}</td>
-            `;
-          } else {
-            // Create a new row for the player in the sidebar
-            const playerInfo = document.createElement('tr');
-            playerInfo.innerHTML = `
-              <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
-              <td>${player.position.x}</td>
-              <td>${player.position.z}</td>
-              <td>${player.position.y}</td>
-            `;
-            playerTableBody.appendChild(playerInfo);
-            playerRows.set(player.name, playerInfo);
-          }
+// Check if a row for this player already exists in the sidebar
+if (playerRows.has(player.name)) {
+  // Update the existing row with new coordinates
+  const playerRow = playerRows.get(player.name);
+  playerRow.innerHTML = `
+    <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
+    <td>${player.position.x}</td>
+    <td>${player.position.z}</td>
+    <td><button class="btn btn-info"><i class="fas fa-search"></i> Search</button></td>
+  `;
+} else {
+  // Create a new row for the player in the sidebar
+  const playerInfo = document.createElement('tr');
+  playerInfo.innerHTML = `
+    <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
+    <td>${player.position.x}</td>
+    <td>${player.position.z}</td>
+    <td><button class="btn btn-info"><i class="fas fa-search"></i> Search</button></td>
+  `;
+  playerTableBody.appendChild(playerInfo);
+  playerRows.set(player.name, playerInfo);
+}
+
 
           // Add the player's name to the set of present players
           presentPlayerNames.add(player.name);
         }
       });
+// Set the initial zoom level and zoom increment
+let initialZoom = -2; // Adjust the initial zoom level as needed
+        let zoomIncrement = 3; // Adjust the zoom increment as needed
+
+        // Function to handle clicking on player names in the sidebar
+        function handlePlayerNameClick(event) {
+            const playerName = event.target.textContent;
+            const playerMarker = markers[playerName];
+            if (playerMarker) {
+                // Zoom to the player's sprite with an adjusted zoom level
+                map.setView(playerMarker.getLatLng(), initialZoom + zoomIncrement);
+            }
+        }
+
+        // Add event listeners to player names in the sidebar
+        document.querySelectorAll('.player-name').forEach(playerNameElement => {
+            playerNameElement.addEventListener('click', handlePlayerNameClick);
+        });
 
       // Handle vehicles
       data.vehicles.forEach(vehicle => {
