--- a/views/Map/index.ejs
+++ b/views/Map/index.ejs
@@ -7,20 +7,61 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css">
-    <link rel="stylesheet" href="styles/map.css">
     <script type="module" src="js/color-modes.js"></script>
-
+    
     <link rel="stylesheet" href="https://cdn.rawgit.com/ardhi/Leaflet.MousePosition/master/src/L.Control.MousePosition.css">
     <!-- Add Bootstrap 5 CSS -->
     <link rel="stylesheet" href="styles/bootstrap.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js" type="text/javascript"></script>
     <script src="https://cdn.rawgit.com/ardhi/Leaflet.MousePosition/master/src/L.Control.MousePosition.js"
-        type="text/javascript"></script>
+    type="text/javascript"></script>
     <!-- Add Bootstrap 5 JS and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="styles/map.css">
+<style>
+      /* Define CSS styles for the sprite marker */
+      .sprite-marker {
+        width: 32px; /* Adjust the size of the sprite */
+        height: 32px; /* Adjust the size of the sprite */
+        background-size: cover;
+        background-image: url('images/mapsprites/default-sprite-image.png'); /* Replace with the actual path to your sprite image */
+        cursor: pointer; /* Add a pointer cursor to indicate clickability */
+      }
+      .vehicle-marker {
+        width: 32px; /* Adjust the size of the sprite */
+        height: 32px; /* Adjust the size of the sprite */
+        background-size: cover;
+        background-image: url('images/mapsprites/vehicles.png'); /* Replace with the actual path to your sprite image */
+        cursor: pointer; /* Add a pointer cursor to indicate clickability */
+      }
+      /* Define CSS styles for the admin sprite marker */
+      .sprite-marker-admin {
+        width: 32px; /* Adjust the size of the sprite */
+        height: 32px; /* Adjust the size of the sprite */
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url('images/mapsprites/admin-sprite.svg'); /* Replace with the actual path to your sprite image */
+        cursor: pointer; /* Add a pointer cursor to indicate clickability */
+      }
+      /* Add this CSS style to your <style> block */
+      .player-tooltip {
+        display: none; /* Hide the tooltip by default */
+        position: absolute;
+        padding: 4px;
+        border: 1px solid #ccc;
+        z-index: 9999;
+      }
+      /* Show the tooltip when sprite is hovered or clicked */
+      .sprite-marker:hover + .player-tooltip,
+      .sprite-marker.clicked + .player-tooltip {
+        display: block;
+      }
 
+</style>
 </head>
 
 <body>
@@ -109,26 +150,20 @@
                         <th colspan="4">Player Information</th>
                     </tr>
                     <tr>
-                        <th>Player Name</th>
-                        <th>Permission Level</th>
-                        <th>Z Coordinate</th>
-                        <th>Show On Map</th>
+                        <th>Players</th>
                     </tr>
                 </thead>
-
                 <tbody id="player-table-body">
                     <!-- Player data will be inserted here dynamically -->
                 </tbody>
             </table>
-
-            <div class="card">
-                <div id="sprite-status">Sprite Status: </div>
-                <!-- This is the new header for sprite status -->
+            <div id="player-info"></div>
+<hr>
+            <div class="card p-3 border-left-primary">
                 <div id="last-update"></div>
                 <!-- This is the last update timestamp -->
             </div>
-
-        </div>
+          </div>
         <!-- Bootstrap Map Container -->
         <div id="map" class="container-fluid"></div>
     </div>
@@ -181,6 +216,7 @@ function updateTable() {
           const pixelY = parseFloat(player.position.y) * (height / 1059); // Adjust as needed for height
 
           // Determine the CSS class for the sprite marker based on admin status
+          
           const spriteMarkerClass = player.isAdmin && player.isAdmin.toLowerCase() === "true" ? 'sprite-marker-admin' : 'sprite-marker';
 
           if (!markers[player.name]) {
@@ -216,24 +252,19 @@ function updateTable() {
             markers[player.name].setLatLng([pixelZ, pixelX]);
           }
 
+
 // Check if a row for this player already exists in the sidebar
 if (playerRows.has(player.name)) {
   // Update the existing row with new coordinates
   const playerRow = playerRows.get(player.name);
   playerRow.innerHTML = `
-    <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
-    <td>${player.position.x}</td>
-    <td>${player.position.z}</td>
-    <td><button class="btn btn-info"><i class="fas fa-search"></i> Search</button></td>
+  <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
   `;
 } else {
   // Create a new row for the player in the sidebar
   const playerInfo = document.createElement('tr');
   playerInfo.innerHTML = `
     <td class="player-name" data-lat="${pixelZ}" data-lng="${pixelX}">${player.name}</td>
-    <td>${player.position.x}</td>
-    <td>${player.position.z}</td>
-    <td><button class="btn btn-info"><i class="fas fa-search"></i> Search</button></td>
   `;
   playerTableBody.appendChild(playerInfo);
   playerRows.set(player.name, playerInfo);
@@ -244,25 +275,45 @@ if (playerRows.has(player.name)) {
           presentPlayerNames.add(player.name);
         }
       });
+
+
 // Set the initial zoom level and zoom increment
 let initialZoom = -2; // Adjust the initial zoom level as needed
-        let zoomIncrement = 3; // Adjust the zoom increment as needed
+let zoomIncrement = 3; // Adjust the zoom increment as needed
 
-        // Function to handle clicking on player names in the sidebar
-        function handlePlayerNameClick(event) {
-            const playerName = event.target.textContent;
-            const playerMarker = markers[playerName];
-            if (playerMarker) {
-                // Zoom to the player's sprite with an adjusted zoom level
-                map.setView(playerMarker.getLatLng(), initialZoom + zoomIncrement);
-            }
-        }
+// Add event listeners for table row clicks
+document.querySelectorAll('#player-table-body tr').forEach(function (row) {
+  row.addEventListener('click', function () {
+    const playerName = row.querySelector('.player-name').textContent;
+    const playerMarker = markers[playerName];
 
-        // Add event listeners to player names in the sidebar
-        document.querySelectorAll('.player-name').forEach(playerNameElement => {
-            playerNameElement.addEventListener('click', handlePlayerNameClick);
-        });
+    // Define playerGroup inside the click event listener
+    const playerGroup = data.players.find(player => player.name === playerName)?.isAdmin === "true" ? 'Admin' : 'Player';
 
+    if (playerMarker) {
+      // Zoom to the player's sprite with an adjusted zoom level
+      map.setView(playerMarker.getLatLng(), initialZoom + zoomIncrement);
+
+      // Create a card for the player information
+      const playerInfoCard = document.createElement('div');
+      playerInfoCard.classList.add('card');
+      playerInfoCard.innerHTML = `
+        <div class="card-body border-left-primary">
+          <h5 class="card-title">${playerName}</h5>
+          <p class="card-text">Permission Group: ${playerGroup}</p>
+        </div>
+      `;
+
+      // Clear any previously displayed player info
+      const playerInfoContainer = document.getElementById('player-info');
+      playerInfoContainer.innerHTML = '';
+
+      // Append the player info card to the container
+      playerInfoContainer.appendChild(playerInfoCard);
+    }
+  });
+});
+      
       // Handle vehicles
       data.vehicles.forEach(vehicle => {
         // Check if this vehicle type has a specific sprite image defined
